--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -82,42 +82,38 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
         {
           coverImageURL && (
             <div class="cover">
-              <img src={coverImageURL} />
+              <img src={coverImageURL} class="cover-img" />
+              <div class="cover-black" />
+              <header>
+                <h1>
+                  <a href={getNavLink('/')}>
+                    {database.Icon && database.Icon.Type === 'emoji' ? (
+                      <>
+                        <span>{database.Icon.Emoji}</span>
+                        {database.Title}
+                      </>
+                    ) : database.Icon && database.Icon.Type === 'external' ? (
+                      <>
+                        <img src={database.Icon.Url} />
+                        {database.Title}
+                      </>
+                    ) : database.Icon && database.Icon.Type === 'file' ? (
+                      <>
+                        <img src={customIconURL} class="custom-icon" />
+                        {database.Title}
+                      </>
+                    ) : (
+                      database.Title
+                    )}
+                  </a>
+                </h1>
+                <div class="description">{database.Description}</div>
+              </header>
             </div>
           )
         }
 
         <div class="content">
-          <header>
-            <h1>
-              <a href={getNavLink('/')}>
-                {
-                  database.Icon && database.Icon.Type === 'emoji' ? (
-                    <>
-                      <span>{database.Icon.Emoji}</span>
-                      {database.Title}
-                    </>
-                  ) : database.Icon && database.Icon.Type === 'external' ? (
-                    <>
-                      <img src={database.Icon.Url} />
-                      {database.Title}
-                    </>
-                  ) : database.Icon && database.Icon.Type === 'file' ? (
-                    <>
-                      <img src={customIconURL} class="custom-icon" />
-                      {database.Title}
-                    </>
-                  ) : (
-                    database.Title
-                  )
-                }
-              </a>
-            </h1>
-            <div class="description">
-              {database.Description}
-            </div>
-          </header>
-
           <slot name="main" />
 
           <footer>
@@ -181,13 +177,24 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
   }
 
   div.cover {
+    position: relative;
   }
-  div.cover img {
+  div.cover .cover-img {
     display: block;
     width: 100%;
     height: 20vh;
     object-fit: cover;
     object-position: center 60%;
+  }
+
+  div.cover .cover-black {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #333;
+    opacity: 0.3;
   }
 
   div.content {
@@ -201,10 +208,15 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
 
   main header {
     padding: 20px 0 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   main header h1 {
     font-weight: 700;
-    color: #333;
+    color: #f29900;
+    text-align: center;
   }
   main header h1 a {
     display: block;
@@ -236,6 +248,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
   main header div.description {
     padding: 0.3rem 0 0.6rem;
     font-size: 0.95rem;
+    color: #fbfaf5;
   }
 
   main footer {
@@ -264,8 +277,8 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
     --gap: 1rem;
     --gap-double: 2rem;
 
-    --bg: #fff;
-    --fg: #333;
+    --bg: #fbfaf5;
+    --fg: #595857;
     --accents-1: #666;
     --accents-2: #666;
     --accents-3: #666;
