--- a/src/components/PostTags.astro
+++ b/src/components/PostTags.astro
@@ -34,6 +34,7 @@ const { post, enableLink = true } = Astro.props
     display: flex;
     flex-wrap: wrap;
     gap: 6px;
+    padding-top: 0.5rem;
   }
   .post-tags a,
   .post-tags span {
