--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -102,26 +102,35 @@ if (post.FeaturedImage && post.FeaturedImage.Url) {
   <div slot="main" class={styles.main}>
     <div class={styles.post}>
       <PostDate post={post} />
-      <PostTags post={post} />
       <PostTitle post={post} enableLink={false} />
-      <PostBody blocks={blocks} />
       <PostTags post={post} />
-
-      <footer>
-        <PostRelativeLink prevPost={prevPost} nextPost={nextPost} />
-      </footer>
+      <PostBody blocks={blocks} />
+      <div class="footer-wrap">
+        <PostTags post={post} />
+        <footer>
+          <PostRelativeLink prevPost={prevPost} nextPost={nextPost} />
+        </footer>
+      </div>
     </div>
   </div>
 
   <div slot="aside" class="aside">
     <BlogPostsLink
-      heading="Posts in the same category"
+      heading="同じカテゴリーの記事"
       posts={postsHavingSameTag.filter(
         (p: interfaces.Post) => p.Slug !== post.Slug
       )}
     />
-    <BlogPostsLink heading="Recommended" posts={rankedPosts} />
-    <BlogPostsLink heading="Latest posts" posts={recentPosts} />
-    <BlogTagsLink heading="Categories" tags={tags} />
+    <BlogPostsLink heading="おすすめ記事" posts={rankedPosts} />
+    <BlogPostsLink heading="最新記事" posts={recentPosts} />
+    <BlogTagsLink heading="カテゴリー" tags={tags} />
   </div>
 </Layout>
+
+<style>
+  .footer-wrap {
+    border-top: 1px dashed #888;
+    margin: 0 auto;
+    padding-top: 1rem;
+  }
+</style>
