--- a/src/components/NoContents.astro
+++ b/src/components/NoContents.astro
@@ -1,4 +1,11 @@
 ---
 ---
 
-<div class="no-contents">There are no contents yet</div>
+<div class="no-contents">まだコンテンツはありません。</div>
+
+<style>
+  .no-contents {
+    font-size: 0.95rem;
+    padding-left: 0.4rem;
+  }
+</style>
