--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,7 +46,7 @@ if (database.Icon && database.Icon.Type === 'file') {
   }
 }
 
-const asidePaddingTop = coverImageURL ? '200px' : '60px'
+const asidePaddingTop = '60px'
 ---
 
 <!DOCTYPE html>
@@ -113,23 +113,25 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
           )
         }
 
-        <div class="content">
-          <slot name="main" />
+        <div class="main-body">
+          <div class="content">
+            <slot name="main" />
 
-          <footer>
-            <div>
-              <span>Powered by</span>
-              <a href="https://github.com/otoyo/astro-notion-blog"
-                >astro-notion-blog</a
-              >
-            </div>
-          </footer>
+            <footer>
+              <div>
+                <span>Powered by</span>
+                <a href="https://github.com/otoyo/astro-notion-blog"
+                  >astro-notion-blog</a
+                >
+              </div>
+            </footer>
+          </div>
+
+          <aside>
+            <slot name="aside" />
+          </aside>
         </div>
       </main>
-
-      <aside>
-        <slot name="aside" />
-      </aside>
     </div>
 
     {
@@ -162,11 +164,21 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
     }
   }
 
+  main .main-body {
+    display: flex;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 40px;
+  }
+
   aside {
+    flex: 1;
     order: 1;
-    width: 300px;
-    padding: var(--asidePaddingTop) 20px 20px;
-    background-color: #f4f4f4;
+    width: 200px;
+    padding: var(--asidePaddingTop) 30px 20px;
+    position: sticky;
+    top: 0;
+    height: 100%;
   }
   @media (max-width: 640px) {
     aside {
@@ -198,7 +210,11 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
   }
 
   div.content {
-    padding: 20px 40px;
+    margin: 30px 0;
+    padding: 30px 40px;
+    max-width: 790px;
+    background-color: #fff;
+    border-radius: 20px;
   }
   @media (max-width: 640px) {
     div.content {
@@ -322,7 +338,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
     background-size: 50px 50px;
 
     /* Hack */
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 
     -webkit-font-smoothing: antialiased;
   }
@@ -421,7 +437,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
     display: block;
     height: 1px;
     border: 0;
-    margin: 0.3rem 0;
+    margin: 0.3rem 0 0.5rem;
     background-color: #333;
   }
 
