ダークモード実装

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import { getDatabase } from '../lib/notion/client.ts'
 import { getNavLink, getStaticFilePath, filePath } from '../lib/blog-helpers.ts'
 import '../styles/syntax-coloring.css'
 import GoogleAnalytics from '../components/GoogleAnalytics.astro'
+import Darkmode from '../components/Darkmode.astro'
 
 export interface Props {
   title: string
@@ -124,6 +125,10 @@ const asidePaddingTop = '60px'
         }
 
         <div class="main-body">
+          <div class="darkmode-wrap">
+            <Darkmode />
+          </div>
+
           <div class="content">
             <slot name="main" />
 
@@ -187,11 +192,24 @@ const asidePaddingTop = '60px'
     }
   }
 
+  main .darkmode-wrap {
+    padding: var(--asidePaddingTop) 30px 0 0;
+    position: sticky;
+    top: 0;
+    height: 100%;
+  }
+  @media (max-width: 640px) {
+    main .darkmode-wrap {
+      padding: 2rem 0 0;
+      position: static;
+    }
+  }
+
   aside {
     flex: 1;
     order: 1;
-    width: 200px;
-    padding: var(--asidePaddingTop) 30px 20px;
+    width: 260px;
+    padding: var(--asidePaddingTop) 0 30px 20px;
     position: sticky;
     top: 0;
     height: 100%;
@@ -229,12 +247,14 @@ const asidePaddingTop = '60px'
   div.content {
     margin: 30px 0;
     padding: 30px 40px;
-    max-width: 790px;
+    width: 790px;
+    /* min-width: 700px; */
     background-color: #fff;
     border-radius: 20px;
   }
   @media (max-width: 640px) {
     div.content {
+      width: 100%;
       padding: 18px 15px;
       margin: 20px 0;
     }
